# diary

./: .gitignore  CLAUDE.md  index.html  level_exp.xlsx  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  db.rs  lib.rs  main.rs  ocr.rs
src-tauri/src/ocr/: engine.rs  mod.rs  parser.rs  template_matcher.rs  types.rs
src/components/: BossClearDialog.tsx  BossSettingsDialog.tsx  DailyDashboardDialog.tsx  DifficultyBadge.tsx  EquipmentDialog.tsx  HuntingDialog.tsx  ItemDropDialog.tsx  PiecePriceDialog.tsx  RevenueChart.tsx  ScreenshotRecognitionDialog.tsx  SettingsDialog.tsx  UpdateDialog.tsx
src/components/ui/: button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx
src/data/: bossData.ts  expTable.ts
src/hooks/: useTheme.ts
src/lib/: utils.ts
src/pages/: MainPage.tsx  SetupPage.tsx
src/types/: index.ts
다이어리사용이미지/: 결정석 가격.txt
