[package]
name = "maple-diary"
version = "0.1.0"
description = "MapleStory Diary - 메이플스토리 사냥/보스 기록 다이어리"
authors = ["you"]
edition = "2021"

[lib]
name = "maple_diary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP Client for MapleStory API
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# System directories
dirs = "5"
